--- a/public/assets/web/css/dev.css
+++ b/public/assets/web/css/dev.css
@@ -1,3 +1,44 @@
 #userRegister{
 	max-width: 485px !important;
 }
+#orderSubmit {
+    margin-top: 25px;
+    border: 0;
+    background-color: #fbece7;
+    width: 100%;
+    padding: 14px;
+    font-weight: 600;
+    box-shadow: 0px 1px 5px #4c4c4c47;
+    transition: all ease-in-out .2s;
+    border-radius: 2px;
+    text-align: center;
+}
+#orderSubmit:hover {
+	box-shadow: none;
+	color: #fff;
+	background-color: #000;
+}
+.loggedIn a img {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    margin-right: 8px;
+    vertical-align: middle;
+}
+.loggedIn .dropdown-toggle{
+	color:#154767;
+	font-weight: 600;
+}
+.loggedIn {
+    background-color: #ffffff52;
+    padding: 3px 15px;
+    border-radius: 7px;
+    margin-top: 13px;
+}
+.loggedIn ul li{
+	transition: all ease-in-out .2s;
+}
+.loggedIn ul li:hover {
+    background-color: #fbece7;
+    padding: 2px 5px;
+}
