Order Payment Bugs Fixes | Booker and Practitioner dashboard bugs fixes

--- a/public/assets/web/css/dev.css
+++ b/public/assets/web/css/dev.css
@@ -42,3 +42,11 @@
     background-color: #fbece7;
     padding: 2px 5px;
 }
+.ratingAvg{
+    font-size: 20px !important;
+    font-weight: bold;
+}
+.ratingAvg img{
+    margin-top: -3px;
+    margin-left: 5px;
+}
