Order Management Updates

--- a/public/assets/web/new/css/dev.css
+++ b/public/assets/web/new/css/dev.css
@@ -13,3 +13,7 @@
 .feder-profile img {
     border-radius: 50%;
 }
+.date-picker .ui-state-disabled .ui-state-default {
+    background-color: #dedede;
+    color: #fff;
+}
