--- a/public/assets/web/new/css/custom-new.css
+++ b/public/assets/web/new/css/custom-new.css
@@ -2130,17 +2130,18 @@ margin-left: 7px;
 }
 
 
-
 .book-time-btn {
     border: 1px solid silver;
-    padding: 7px 12px;
+    padding: 7px 0px;
     letter-spacing: 0.4px;
     font-weight: 600;
-    margin-right: 12px;
+    margin-right: 10px;
     background: none;
     border-radius: 5px;
+    display: block;
+    text-align: center;
+    max-width: 130px;
 }
-
 .all-bookings {
     float: left;
     width: 100%;
@@ -2497,6 +2498,39 @@ span.circle-1 {
     color: #b1b1b1;
 }
 
+.time-slider {
+    float: left;
+    width: 100% !important;
+    padding: 0px 0px !important;
+}
+.booked-content>img:nth-child(1) {
+    width: 200px;
+}
+
+
+
+.time-slider button.slick-arrow {
+    background: #5d4e6d;
+    color: white !important;
+    border-radius: 100%;
+    width: 25px;
+    height: 25px;
+}
+
+.time-slider button.slick-arrow::before {
+    color: white !important;
+    line-height: 28px !important;
+}
+
+.time-slider button.slick-prev.slick-arrow {
+    left: -20px;
+    z-index: 99 ;
+}
+
+.time-slider button.slick-next.slick-arrow {
+    right: -20px;
+    z-index: 99;
+}
 
 
 
@@ -3253,6 +3287,7 @@ section.banner-sec.bg-5 {
 .book-time-btn {
     padding: 5px 10px;
     margin-bottom: 10px;
+    max-width: 120px;
 }
 .book-now-btn1 {
     width: 30px;
