--- a/public/assets/web/new/css/custom-new.css
+++ b/public/assets/web/new/css/custom-new.css
@@ -2083,7 +2083,7 @@ margin-left: 7px;
 .item-edit1 {
     position: absolute;
     right: 0px;
-    top: 12px;
+    bottom: 13px;
  
     font-size: 15px;
     background: none;
