--- a/public/assets/css/dev.css
+++ b/public/assets/css/dev.css
@@ -14,7 +14,7 @@
 }
 .booking-detail-table {
     border: 1px solid #e6e6e6;
-    padding: 0px 10px;
+    padding: 0px 0px;
     margin-bottom: 10px;
 }
 .booking-detail-table tr{
@@ -80,4 +80,38 @@ span > i.fa-star{
 }
 .dropdown-menu.show {
     left: 0px !important;
+}
+.booking-detail-table label {
+    display: table-cell;
+    font-size: 12px;
+    font-weight: normal;
+}
+.booking-detail-table td {
+    font-size: 16px !important;
+    font-weight: 700;
+    border-right: 1px solid #e6e6e6;
+}
+.booking-detail-table table {
+    width: 100%;
+}
+.booking-detail-table .addonLabel {
+    background-color: #e6e6e6;
+    display: inline-block;
+    padding: 2px 6px 2px 6px;
+    margin-right: 8px;
+    border-radius: 8px;
+    min-width: 200px;
+}
+.booking-detail-table .addonLabel span:nth-child(1) {
+    font-size: 14px;
+}
+.booking-detail-table .addonLabel span:nth-child(4) {
+    float: right;
+    font-size: 12px;
+    font-weight: normal;
+}
+.booking-detail-table .addonLabel span:nth-child(3) {
+    float: left;
+    font-size: 12px;
+    font-weight: normal;
 }
