--- a/public/assets/web/new/css/dev.css
+++ b/public/assets/web/new/css/dev.css
@@ -204,3 +204,7 @@
     margin-top: -8px;
     padding-right: 75px;
 }
+.book-summary-item .addonLabelTreatment {
+    margin-bottom: 0;
+    padding: 0;
+}
