--- a/public/assets/css/dev.css
+++ b/public/assets/css/dev.css
@@ -87,7 +87,7 @@ span > i.fa-star{
     font-weight: normal;
 }
 .booking-detail-table td {
-    font-size: 16px !important;
+    font-size: 14px !important;
     font-weight: 700;
     border-right: 1px solid #e6e6e6;
 }
@@ -114,4 +114,76 @@ span > i.fa-star{
     float: left;
     font-size: 12px;
     font-weight: normal;
+}
+/*
+.pad-1 {
+    padding-bottom: 20px;
+}
+*/.height-custom1 {
+    min-height: 100%;
+}
+.category-message {
+    position: relative;
+}
+.all-categories {
+    z-index: 99;
+    position: relative;
+}
+
+.service-rad-btn {
+    margin-left: 10px;
+}
+.service-box-custom {
+    margin-bottom: 20px;
+}
+ @media screen and (max-width:768px) and (min-width:520px) {  
+    .booking-btn-custom a {
+    padding: 10px 14px;
+    font-size: 12px;
+}
+
+ }
+
+@media screen and (max-width:519px) and (min-width:320px) { 
+.user-dropdown {
+    float: right;
+}
+.booking-detail-table table tbody tr td {
+    padding: 5px 12px 5px 12px;
+}
+/*.pad-1 {
+    padding-bottom: 20px;
+}*/
+.category-message {
+    position: relative;
+    float: none;
+}
+
+.height-custom1 {
+    min-height: 100%;
+}
+.service-rad-btn {
+    margin-left: 10px;
+    padding: 10px 10px;
+}
+/*.orderCancel {
+    padding: 10px 25px;
+}
+
+.orderStart {
+     padding: 10px 25px;
+}*/
+.booking-btn-custom a {
+    padding: 10px 10px;
+    font-size: 12px;
+}
+.booking-btn-custom {
+    text-align: center !important;
+}
+
+.booking-detail-table {
+    border: 1px solid #e6e6e6;
+    padding: 12px 0px;
+}
+
 }
