--- a/public/assets/web/new/css/dev.css
+++ b/public/assets/web/new/css/dev.css
@@ -228,3 +228,58 @@
     padding: 15px 0px;
     padding-left: 5px;
 }
+
+.safe-treatment {
+    background: #fbece7;
+    border-radius: 10px;
+}
+.safe-treatment-text h4 {
+    color: #5D4E6D;
+    font-size: 32px;
+    letter-spacing: 1px;
+    font-family: 'Quicksand' !important;
+    font-weight: 600;
+    padding: 20px 20px;
+    margin: 0px !important;
+}
+.safe-treatment-text1 p {
+    font-family: 'MULISH';
+    color: white;
+    font-size: 15px;
+    letter-spacing: 0.3px;
+    line-height: 25px;
+    margin: 0px !important; 
+    background: #5D4E6D;
+    padding: 20px 20px;
+}
+.safe-treatment-text2 {
+    background: #f8f8fa;
+    padding: 20px 20px;
+}
+.safe-treatment-text p , .safe-treatment-text2 p{
+    font-family: 'MULISH';
+    color: black;
+    font-size: 15px;
+    letter-spacing: 0.3px;
+    line-height: 25px;
+    margin: 0px !important;
+    padding: 10px 0px;
+    background: #f8f8fa;
+}
+.safe-treatment-text hr {
+    margin: 0px;
+    height: 1px;
+    background: #80808014;
+    margin-bottom: 10px;
+}
+.safe-treatment-text3 {
+    background: #fff;
+    text-align: center;
+    padding: 25px 20px 10px 20px;
+}
+.safe-treatment-text3 p {
+    padding: 15px 0px 0px 0px;
+}
+.modal-dialog2 {
+    top: 60%;
+} 
