--- a/public/assets/css/dev.css
+++ b/public/assets/css/dev.css
@@ -196,3 +196,64 @@ span > i.fa-star{
 }
 
 }
+
+.comBlock {
+    width: 100px;
+    margin-left: 160px;
+    margin-top: -20px;
+}
+.editComBlock .comField {
+    width: 80px;
+    height: 22px;
+}
+.editComBlock button {
+    margin-left: 10px;
+    border: 0;
+    background: none;
+    color: #007bff;
+    font-weight: 600;
+}
+.editComBlock form {
+    display: inline-flex;
+}
+
+.practAmountBlock {
+    width: 100px;
+    margin-left: 80px;
+    margin-top: -16px;
+}
+.editPractAmountBlock .practAmountField {
+    width: 80px;
+    height: 22px;
+}
+.editPractAmountBlock button {
+    margin-left: 10px;
+    border: 0;
+    background: none;
+    color: #007bff;
+    font-weight: 600;
+}
+.editPractAmountBlock form {
+    display: inline-flex;
+}
+
+
+.custAmountBlock {
+    width: 100px;
+    margin-left: 70px;
+    margin-top: -19px;
+}
+.editCustAmountBlock .custAmountField {
+    width: 80px;
+    height: 22px;
+}
+.editCustAmountBlock button {
+    margin-left: 10px;
+    border: 0;
+    background: none;
+    color: #007bff;
+    font-weight: 600;
+}
+.editCustAmountBlock form {
+    display: inline-flex;
+}
