--- a/public/assets/web/new/css/custom-new.css
+++ b/public/assets/web/new/css/custom-new.css
@@ -698,7 +698,9 @@ img.service-img {
     opacity: 1 !important;
     text-align: center;
     display: block;
-    font-size: 25px;
+    font-size: 16px;
+    margin-left: 1px;
+    margin-top: -1px;
 }
 .slick-prev:before {
     content: '<';
@@ -708,7 +710,8 @@ img.service-img {
     opacity: 1 !important;
     text-align: center;
     display: block;
-    font-size: 25px;
+    font-size: 16px;
+    margin-top: -1px;
 }
 
 
