--- a/public/assets/css/dev.css
+++ b/public/assets/css/dev.css
@@ -217,7 +217,7 @@ span > i.fa-star{
     display: inline-flex;
 }
 
-.practAmountBlock {
+.amountBlock {
     width: 100px;
     margin-left: 80px;
     margin-top: -16px;
@@ -237,12 +237,6 @@ span > i.fa-star{
     display: inline-flex;
 }
 
-
-.custAmountBlock {
-    width: 100px;
-    margin-left: 70px;
-    margin-top: -19px;
-}
 .editCustAmountBlock .custAmountField {
     width: 80px;
     height: 22px;
@@ -256,4 +250,13 @@ span > i.fa-star{
 }
 .editCustAmountBlock form {
     display: inline-flex;
+}
+
+.btn.color-black {
+    background-color: #000 !important;
+    color: #fff !important;
+}
+.btn.color-black:hover {
+    background-color: #fff !important;
+    color: #000 !important;
 }
