--- a/public/assets/css/dev.css
+++ b/public/assets/css/dev.css
@@ -260,3 +260,25 @@ span > i.fa-star{
     background-color: #fff !important;
     color: #000 !important;
 }
+
+/* Refund */
+
+.refundBlock {
+    width: 130px;
+    margin-left: -117px;
+    margin-top: 4px;
+}
+.editRefundBlock .refundField {
+    width: 80px;
+    height: 22px;
+}
+.editRefundBlock button {
+    margin-left: 10px;
+    border: 0;
+    background: none;
+    color: #007bff;
+    font-weight: 600;
+}
+.editRefundBlock form {
+    display: inline-flex;
+}
