--- a/public/assets/web/new/css/custom-new.css
+++ b/public/assets/web/new/css/custom-new.css
@@ -2311,7 +2311,7 @@ margin-left: 7px;
 .date-picker .input button {
   width: 50px;
   height: 50px;
-  background-color: #8392A7;
+  background-color: #5d4e6d;
   color: white;
   line-height: 50px;
   border: 0;
@@ -2494,7 +2494,7 @@ margin-left: 7px;
 .date-picker .ui-datepicker-header {
     height: 100%;
     line-height: 50px;
-    background: #8392A7;
+    background: #5d4e6d;
     color: #fff;
     margin-bottom: 0px;
 }
