--- a/public/assets/web/new/css/custom-new.css
+++ b/public/assets/web/new/css/custom-new.css
@@ -284,7 +284,7 @@ body {
 }
 
 .sec-head4 p {
-    max-width: 650px;
+    max-width: 100%;
     margin: auto;
     color: #6C6C6C;
     font-size: 17px;
