--- a/public/assets/web/new/css/dev.css
+++ b/public/assets/web/new/css/dev.css
@@ -318,9 +318,9 @@ a.custom-btn1 {
     color: white !important; 
 }
 .practPrice {
-    color: #1975ff;
-    font-weight: 700;
-    margin-top: -10px;
+    color: #053C5E;
+    font-weight: 400;
+    margin-top: -5px;
 }
 .practPrice img {
     height: 25px;
