--- a/public/assets/css/dev.css
+++ b/public/assets/css/dev.css
@@ -105,18 +105,23 @@ span > i.fa-star{
 .booking-detail-table .addonLabel {
     background-color: #e6e6e6;
     display: inline-block;
-    padding: 2px 6px 2px 6px;
+    padding: 5px 6px 5px 6px;
     margin-right: 8px;
     border-radius: 8px;
     min-width: 200px;
 }
 .booking-detail-table .addonLabel span:nth-child(1) {
     font-size: 14px;
+    padding: 5px;
+    padding-right: 40px;
 }
 .booking-detail-table .addonLabel span:nth-child(4) {
     float: right;
     font-size: 12px;
     font-weight: normal;
+    margin-top: -19px;
+    border-left: 2px solid #999999;
+    padding-left: 8px;
 }
 .booking-detail-table .addonLabel span:nth-child(3) {
     float: left;
