--- a/public/assets/web/new/css/custom.css
+++ b/public/assets/web/new/css/custom.css
@@ -1481,11 +1481,14 @@ ul.list-type1 {
     float: none;
     width: 100%;
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: -25px;
     padding: 0px;
     max-width: 350px;
     margin-left: auto;
     margin-right: auto;
+}
+.works-service-box3 {
+    margin-bottom: 40px;
 }
 .professional-text {
     float: left;
