--- a/public/assets/web/new/css/custom-new.css
+++ b/public/assets/web/new/css/custom-new.css
@@ -3117,6 +3117,8 @@ img.shape-line1 , img.shape-line2 {
 }
 .work-service-box2 {
     text-align: left;
+    margin-top: 20px;
+    margin-bottom: 18px;
 }
 .professional-text {
     text-align: left;
