--- a/public/assets/web/new/css/custom-new.css
+++ b/public/assets/web/new/css/custom-new.css
@@ -1886,6 +1886,7 @@ ul.list-style1 li i {
 
 .booking-details-person .dp {
     width: 85px;
+    height: 85px;
     position: absolute;
     left: 0px;
     top: 0px;
